--- a/app/globals.css
+++ b/app/globals.css
@@ -33,5 +33,5 @@
 }
 
 button{
-  @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;  
+  @apply bg-blue-500 text-white font-bold p-2 rounded;  
 }
