--- a/app/globals.css
+++ b/app/globals.css
@@ -37,5 +37,9 @@ body {
 }
 
 button {
-  @apply bg-blue-500 text-white font-bold p-2 rounded;
+  @apply bg-blue-500 hover:bg-blue-600 text-white font-bold p-2 rounded;
+}
+
+select option:hover {
+  color: red !important; /* ホバー時のテキストカラーを赤にする */
 }
