--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ body {
 }
 
 .button {
-  @apply text-white font-bold p-2 rounded;
+  @apply text-white font-bold py-2 rounded;
 }
 
 select option:hover {
@@ -99,7 +99,8 @@ select option:hover {
 
 /* changing dots css */
 @keyframes dotsAnimation {
-  0%, 100% {
+  0%,
+  100% {
     content: "";
   }
   25% {
@@ -117,4 +118,26 @@ select option:hover {
   content: ".";
   animation: dotsAnimation 1.5s infinite steps(1, end);
   font-size: 2rem;
+}
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: transparent;
+  border: 1px solid #d1d5db; /* 灰色の境界線 */
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 0.375rem; /* 角を丸くする */
+  width: 100%; /* 必要に応じて調整 */
+  outline: none; /* フォーカス時のアウトラインを非表示にする */
+  cursor: pointer;
+}
+
+/* option要素のデフォルトスタイルをリセットして背景を透明にする */
+select option {
+  background-color: transparent;
+  color: #000; /* テキストの色を黒にする */
+  padding: 0.5rem;
+  font-size: 1rem;
 }
