--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ body {
 }
 
 .button {
-  @apply text-white font-bold py-2 rounded;
+  @apply rounded py-2 font-bold text-white;
 }
 
 select option:hover {
